# clgl

./: .gitignore  CMakeLists.txt  README.md
clgl/: CMakeLists.txt
clgl/examples/: CMakeLists.txt  basics.cpp  drawables.cpp  drawers.cpp
clgl/include/clgl/: app.hpp  clgl.hpp  clgl_resource.hpp  clgl_resource_manager.hpp  color.hpp  constants.hpp  drawable.hpp  drawer.hpp  events.hpp  exceptions.hpp  font_data.hpp  input.hpp  pixel.hpp  screen.hpp  screen_buffer.hpp  screen_writer.hpp  shading_palettes.hpp  texture.hpp  timings.hpp  transformable.hpp  typedefs.hpp  vec.hpp
clgl/include/clgl/drawables/: circle.hpp  drawables.hpp  intcircle.hpp  intline.hpp  line.hpp  point.hpp  polygon.hpp  sprite.hpp
clgl/include/clgl/drawers/: colors_16.hpp  colors_16_grayscale.hpp  colors_16_grayscale_shaded.hpp  drawers.hpp  full_rgb.hpp  single_color_16_shaded.hpp  single_color_shaded.hpp
clgl/include/clgl/utils/: bit_manipulation.hpp  math.hpp  (+5 more)
clgl/src/: CMakeLists.txt
clgl/src/clgl/: CMakeLists.txt  app.cpp  clgl.cpp  color.cpp  drawer.cpp  events.cpp  input.cpp  screen.cpp  screen_buffer.cpp  screen_writer.cpp  texture.cpp  timings.cpp  transformable.cpp
clgl/src/clgl/drawables/: circle.cpp  intcircle.cpp  intline.cpp  line.cpp  point.cpp  polygon.cpp  sprite.cpp
clgl/src/clgl/drawers/: colors_16.cpp  colors_16_grayscale.cpp  colors_16_grayscale_shaded.cpp  full_rgb.cpp  single_color_16_shaded.cpp  single_color_shaded.cpp
clgl/src/clgl/utils/: bit_manipulation.cpp  math.cpp
clgl/src/tools/: CMakeLists.txt  color_mapping_creator.cpp  color_mapping_creator.md
tools/: CMakeLists.txt
tools/color_mappings_creator/: CMakeLists.txt  README.md  color_mappings_config.hpp  color_mappings_creator.cpp
